--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     /* background-color: #2ed383; */
-    /* color: #fff; */
+    color: #fff;
     height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
